# geoai_veg_map

./: .gitignore  clay_test.ipynb  compress_las.py  dtm_calc.py  environment.yml  inference_eval.py  journal.txt  model.py  octree_downsampling.py  point_cloud_upsampler.py  point_cloud_upsampler_dynamic_edge.py  point_transformer_upsampler.py  preprocess.py  process_pointcloud_stac.py  pyproject.toml  run_ablation_study.py  run_model_test.py  sedgwick_uavlidar_footprints.kmz  worldview_ntf_stac_creation.ipynb  wv2_to_stac.py
UAVSAR/images/SanAnd_08511_21067_000_211123_L090_CX_01_grd/: SanAnd_08511_21067_000_211123_L090HHHV_CX_01.grd.tiff.aux.xml  SanAnd_08511_21067_000_211123_L090_CX_01_grd.csv
UAVSAR/images/SanAnd_08542_23019_011_230927_L090_CX_01_grd/: SanAnd_08542_23019_011_230927_L090HVHV_CX_01.grd.tiff.aux.xml  SanAnd_08542_23019_011_230927_L090_CX_01_grd.xlsx
UAVSAR/images/SanAnd_26512_21067_004_211123_L090_CX_01_grd/: SanAnd_26512_21067_004_211123_L090HVHV_CX_01.grd.tiff.aux.xml  SanAnd_26512_21067_004_211123_L090_CX_01_grd.csv
clay_model/configs/: metadata.yaml
docs/: ddp_debugging_gemini.md  ddp_debugging_gpt.md
local_stac/: catalog.json
local_stac/worldview2-l1b/: collection.json
manuscript/: edited.tex  main.tex  references.bib  remote_sensing_submission.tex  remotesensing-3731500-Proof-Updated.tex  revision1_response.tex  submission_proofreading.tex
manuscript/Definitions/: journalnames.tex  mdpi.cls
scripts/: compress_las_files.sh  get_data.sh  process_data.sh
src/data_prep/: bbox_tile_filter.py  create_training_tile_bboxes.py  data_augmentation.py  generate_training_data.py  h5_chunk_loader.py  imagery_stac.py  imagery_training_data.py  las_to_copc_stac.py  make_local_3dep_stac.py  make_local_naip_stac.py  make_local_uavlidar_stac.py  make_local_uavsar_stac.py  pointcloud_footprints_to_geojson.py  precompute_data.py  process_pointcloud_stac.py  process_uav_lidar.py  split_train_test_val_tiles.py  train_test_split_and_precompute.py  uavsar_to_stac.py  wv2_to_stac.py
src/evaluation/: RQ_test_v2.py  df_based_model_comparison_report.py  generate_eval_df.py  inference_eval.py  manuscript_figures.py  model_comparison_report.py  model_val_report.py  point_cloud_comparison_df_dict.md  val_eval.py
src/models/: cross_attn_fusion.py  encoders.py  fusion.py  model.py  multimodal_model.py
src/training/: data_augmentation.py  ddp_training.py  model_data_readme.md  multimodal_training.py  optuna.py  precompute_data.py  run_model_test.py  train.py  training.py
src/utils/: chamfer_distance.py  infocd.py  knn_graph_gpu.py  point_cloud_utils.py  training_data_eval.py
