[tool.poetry]
name = "geoai-veg-map"
version = "0.1.0"
description = ""
authors = ["Michael Marks"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^1.0.1"
numpy = "<2"
laspy = "^2.5.4"
rasterio = "^1.4.2"
stackstac = "^0.5.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
einops = "^0.8.0"
shapely = "^2.0.6"
uavsar-pytools = "^0.7.1"
pystac-client = "^0.8.5"
scikit-learn = "^1.5.2"
gdal = "3.4.1"
open3d = "^0.18.0"
pyvista = {extras = ["jupyter"], version = "^0.44.1"}
s3fs = "^2024.10.0"
ipykernel = "^6.29.5"
trame = "^3.7.0"
ipywidgets = "^8.1.5"
vtk = "^9.3.1"
addict = "^2.4.0"
conda-lock = "~2.5.6"
fiona = "~1.9.5"
h5netcdf = "~1.3.0"
jupyter-book = "~1.0.0"
jupyterlab = "~4.0.7"
jsonargparse = "~4.27.0"
lancedb = "~0.10.2"
lightning = "~2.1.0"
matplotlib = "~3.8.2"
planetary-computer = "~1.0.0"
python-box = "~7.1.0"
rioxarray = "~0.15.0"
scikit-image = "~0.22.0"
torchdata = "~0.7.1"
torchgeo = "~0.5.2"
transformers = "~4.35.2"
typeshed-client = "~2.4.0"
vit-pytorch = "~1.6.4"
wandb = "~0.15.12"
zarr = "~2.16.1"
stacchip = "0.1.35"
torch-summary = "^1.4.5"
hiddenlayer = "^0.3"
tensorboard = "^2.18.0"
jupyter-copilot = "^0.1.4"
rio-cogeo = "^5.4.0"
elevation = "^1.1.3"

[tool.poetry.extras]
pytorch-osx = ["torch"]
pytorch-linux-cuda12 = ["torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"